@@ -1,0 +1,20 @@
+#!/usr/bin/env python3
+# DESCRIPTION: Verilator: Verilog Test driver/expect definition
+#
+# Copyright 2024 by Wilson Snyder. This program is free software; you
+# can redistribute it and/or modify it under the terms of either the GNU
+# Lesser General Public License Version 3 or the Perl Artistic License
+# Version 2.0.
+# SPDX-License-Identifier: LGPL-3.0-only OR Artistic-2.0
+
+import vltest_bootstrap
+
+test.scenarios('simulator')
+test.top_filename = "t/t_no_std_bad.v"
+test.golden_filename = "t/t_no_std_bad.out"
+
+test.lint(fails=True,
+          verilator_flags2=["--no-std-package", "--exe --main --timing -Wall"],
+          expect_filename=test.golden_filename)
+
+test.passes()
